# BitcoinWolfe

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.json
.cargo/: audit.toml
.claude/: .substrate-plan-context
.github/workflows/: ci.yml
config/: com.bitcoinwolfe.node.plist  default.toml
crates/wolfe-consensus/: Cargo.toml
crates/wolfe-consensus/src/: error.rs  lib.rs
crates/wolfe-lightning/: Cargo.toml
crates/wolfe-lightning/src/: broadcaster.rs  error.rs  event_handler.rs  fee_estimator.rs  lib.rs  logger.rs  persister.rs  types.rs
crates/wolfe-lightning/tests/: broadcaster_tests.rs  event_handler_tests.rs  fee_estimator_tests.rs  logger_tests.rs  manager_rpc_tests.rs  payment_history_tests.rs  persister_tests.rs  security_fixes_tests.rs  wallet_funding_tests.rs
crates/wolfe-mempool/: Cargo.toml
crates/wolfe-mempool/src/: error.rs  lib.rs  policy.rs  pool.rs
crates/wolfe-node/: Cargo.toml
crates/wolfe-node/src/: main.rs  metrics.rs  sync.rs
crates/wolfe-nostr/: Cargo.toml
crates/wolfe-nostr/src/: error.rs  events.rs  lib.rs  nip98.rs
crates/wolfe-p2p/: Cargo.toml
crates/wolfe-p2p/src/: connection.rs  error.rs  lib.rs  manager.rs  message.rs  peer.rs  v2transport.rs
crates/wolfe-rpc/: Cargo.toml
crates/wolfe-rpc/src/: error.rs  handlers.rs  l402.rs  lib.rs  server.rs
crates/wolfe-store/: Cargo.toml
crates/wolfe-store/src/: error.rs  headers.rs  lib.rs  meta.rs  peers.rs
crates/wolfe-store/tests/: header_store_tests.rs  meta_store_tests.rs  node_store_tests.rs  peer_store_tests.rs
crates/wolfe-types/: Cargo.toml
crates/wolfe-types/src/: config.rs  error.rs  lib.rs
crates/wolfe-wallet/: Cargo.toml
crates/wolfe-wallet/src/: error.rs  lib.rs
crates/wolfe-wallet/tests/: wallet_tests.rs
dashboard/: .gitignore  package-lock.json  package.json  svelte.config.js  vitest.config.ts
dashboard/src/: app.css  app.html
dashboard/src/lib/api/: client.ts  rest.ts  rpc.ts  types.ts
dashboard/src/lib/components/layout/: Sidebar.svelte  TopBar.svelte
dashboard/src/lib/components/overview/: SyncProgress.svelte
dashboard/src/lib/components/shared/: Badge.svelte  Button.svelte  Card.svelte  CopyButton.svelte  ErrorCard.svelte  Modal.svelte  Skeleton.svelte  Spinner.svelte  StatCard.svelte  Terminal.svelte  Toast.svelte
dashboard/src/lib/stores/: connection.svelte.ts  lightning.svelte.ts  node.svelte.ts  nostr.svelte.ts  overview.svelte.ts  peers.svelte.ts  polling.svelte.ts  sidebar.svelte.ts  toast.svelte.ts  wallet.svelte.ts
dashboard/src/lib/utils/: clipboard.ts  format.ts  qr.ts
dashboard/src/routes/: +layout.svelte  +page.svelte
dashboard/src/routes/lightning/: +page.svelte
dashboard/src/routes/nostr/: +page.svelte
dashboard/src/routes/peers/: +page.svelte
dashboard/src/routes/settings/: +page.svelte
dashboard/src/routes/wallet/: +page.svelte
dashboard/src/tests/: setup.ts
dashboard/src/tests/accessibility/: a11y.test.ts
dashboard/src/tests/api/: client.test.ts  error-handling.test.ts
dashboard/src/tests/components/: ButtonTestWrapper.svelte  ModalTestWrapper.svelte  TerminalTestWrapper.svelte  button.test.ts  error-card.test.ts  interactions.test.ts  shared.test.ts  sidebar.test.ts  skeleton.test.ts  sync-progress.test.ts  topbar.test.ts
dashboard/src/tests/integration/: lightning-flow.test.ts  wallet-flow.test.ts
dashboard/src/tests/mocks/: app-state.ts  app-stores.ts
dashboard/src/tests/stores/: connection.test.ts  edge-cases.test.ts  node.test.ts  overview.test.ts  polling.test.ts  toast.test.ts  wallet.test.ts
dashboard/src/tests/utils/: clipboard.test.ts  format.test.ts
dashboard/static/: manifest.json
site/: index.html  llms.txt  vercel.json
