[package]
name = "wolfe-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Consensus validation layer for BitcoinWolfe using libbitcoinkernel"

[dependencies]
bitcoin = { workspace = true }
bitcoinkernel = { workspace = true }
wolfe-types = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
