[package]
name = "wolfe-lightning"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Lightning Network integration for BitcoinWolfe using LDK"

[dependencies]
# LDK
lightning = { workspace = true }
lightning-net-tokio = { workspace = true }
lightning-background-processor = { workspace = true }
lightning-rapid-gossip-sync = { workspace = true }
lightning-invoice = { workspace = true }

# Internal crates
wolfe-types = { workspace = true }
wolfe-mempool = { workspace = true }
wolfe-store = { workspace = true }
wolfe-wallet = { workspace = true }

# Workspace deps
bitcoin = { workspace = true }
bdk_wallet = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
redb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
