[package]
name = "wolfe-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "BitcoinWolfe - A modern Bitcoin full node"

[[bin]]
name = "wolfe"
path = "src/main.rs"

[dependencies]
bitcoin = { workspace = true }
wolfe-types = { workspace = true }
wolfe-consensus = { workspace = true }
wolfe-p2p = { workspace = true }
wolfe-mempool = { workspace = true }
wolfe-rpc = { workspace = true }
wolfe-wallet = { workspace = true }
wolfe-store = { workspace = true }
wolfe-nostr = { workspace = true }
wolfe-lightning = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
