[package]
name = "wolfe-nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Nostr integration for BitcoinWolfe — block announcements, fee oracle, and NIP-98 auth"

[dependencies]
wolfe-types = { workspace = true }
wolfe-mempool = { workspace = true }
nostr-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
