[package]
name = "wolfe-p2p"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "P2P networking layer for BitcoinWolfe with BIP324 encrypted transport"

[dependencies]
bitcoin = { workspace = true }
wolfe-types = { workspace = true }
wolfe-store = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true }
bip324 = { workspace = true }
