[package]
name = "wolfe-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "REST and JSON-RPC API server for BitcoinWolfe"

[dependencies]
bitcoin = { workspace = true }
lightning = { workspace = true }
wolfe-types = { workspace = true }
wolfe-mempool = { workspace = true }
wolfe-consensus = { workspace = true }
wolfe-wallet = { workspace = true }
wolfe-lightning = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
wolfe-nostr = { workspace = true }
nostr-sdk = { workspace = true }
dashmap = { workspace = true }
lightning-invoice = { workspace = true }
