[package]
name = "wolfe-store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage layer for BitcoinWolfe using redb"

[dependencies]
bitcoin = { workspace = true }
redb = { workspace = true }
wolfe-types = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
