[package]
name = "wolfe-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, configuration, and error handling for BitcoinWolfe"

[dependencies]
bitcoin = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
